--- a/src/app/delete/tema-delete/tema-delete.component.html
+++ b/src/app/delete/tema-delete/tema-delete.component.html
@@ -1,4 +1,8 @@
-<div class="container">
+<div class="wavetop">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#C4C4C4" fill-opacity="1" d="M0,288L48,277.3C96,267,192,245,288,234.7C384,224,480,224,576,234.7C672,245,768,267,864,245.3C960,224,1056,160,1152,149.3C1248,139,1344,181,1392,202.7L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+</div>
+
+<div class="container-fluid corfundo">
 
     <div class="row mb-5">
         <div class="col-md-12">
@@ -8,22 +12,22 @@
 
     <div class="row mb-3">
         <div class="col-md-12">
-            <h4 class="text-center text-secondary">Você tem certeza que deseja apagar esse tema ? Todas as postagens relacionadas a ele serão igualmente apagadas.</h4>
+            <h4 class="text-center text-secondary">Você tem certeza que deseja apagar esse tema ? </h4>
         </div>
     </div>
 
     <div class="row mb-4 ">
         <div class="col-md-12">
-            <h5 class="text-center text-primary">Nome: {{tema.nomeTema}}</h5>
-            <h5 class="text-center text-primary">Descrição: {{tema.descricao}}</h5>
-            <h5 class="text-center text-primary">Palavras chaves: {{tema.palavrasChaves}}</h5>
+            <h5 class="text-center text-dark">Nome: {{tema.nomeTema}}</h5>
+            <h5 class="text-center text-dark">Descrição: {{tema.descricao}}</h5>
+            <h5 class="text-center text-dark">Palavras chaves: {{tema.palavrasChaves}}</h5>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-12 d-flex justify-content-center">
-            <button class="btn btn-danger mr-4" routerLink='/tema'>Não</button>
-            <button class="btn btn-success" (click)='apagar()'>Sim</button>
+            <button class="btn btn-danger mr-4 mb-5" routerLink='/tema'>Não</button>
+            <button class="btn btn-success mb-5" (click)='apagar()'>Sim</button>
         </div>
     </div>
 
