--- a/src/app/edit/tema-edit/tema-edit.component.html
+++ b/src/app/edit/tema-edit/tema-edit.component.html
@@ -1,4 +1,8 @@
-<div class="container">
+<div class="wavetop">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#C4C4C4" fill-opacity="1" d="M0,288L48,277.3C96,267,192,245,288,234.7C384,224,480,224,576,234.7C672,245,768,267,864,245.3C960,224,1056,160,1152,149.3C1248,139,1344,181,1392,202.7L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+</div>
+
+<div class="container-fluid corfundo">
 
     <div class="row">
         <div class="col-md-12">
@@ -10,18 +14,19 @@
         <div class="col-md-6">
 
             <div class="form-group">
-                <label for="descricao">Descrição</label>
-                <input type="text" class="form-control" id="descricao" [(ngModel)]='tema.nomeTema'>
-                <input type="text" class="form-control" id="descricao" [(ngModel)]='tema.descricao'>
-                <input type="text" class="form-control" id="descricao" [(ngModel)]='tema.palavrasChaves'>
+                <label for="descricao"></label>
+                <p>Nome <input type="text" class="form-control mt-3" id="descricao" [(ngModel)]='tema.nomeTema'></p>
+                <p>Descrição <input type="text" class="form-control mt-3" id="descricao" [(ngModel)]='tema.descricao'></p>
+                <p>Palavra chave <input type="text" class="form-control mt-3" id="descricao" [(ngModel)]='tema.palavrasChaves'></p>
             </div>
 
             <div class="d-flex justify-content-center">
-                <button class="btn btn-danger mr-4" routerLink='/tema'>Cancelar</button>
-                <button class="btn btn-success" (click)='atualizar()'>Atualizar</button>
+                <button class="btn btn-danger mr-4 mb-4" routerLink='/tema'>Cancelar</button>
+                <button class="btn btn-success mb-4" (click)='atualizar()'>Atualizar</button>
             </div>
 
         </div>
     </div>
 
 </div>
+
