--- a/src/app/postar/postar.component.css
+++ b/src/app/postar/postar.component.css
@@ -22,8 +22,7 @@ position: relative;
     padding: 0;
     background-size: cover;
     overflow: hidden;
-    background-image: url(https://i.imgur.com/u1Oj44f.png);
-    background-repeat: no-repeat;;
+    background-repeat: no-repeat;
 }
 
 #main-banner-content {
