--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light menu-cor ">
+<nav class="navbar navbar-expand-lg navbar-light menu-cor sticky-top">
   <img routerLink='/inicio' href="#" class="logo ml-3" src="https://i.imgur.com/mrHpGjb.png" alt="">
 
   
