--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -46,8 +46,8 @@
                     <label for="tipo">Tipo de usuário</label>
                     <select class="form-control" name="tipo" id="tipo" (change)='tipoUsuario($event)'>
                         <option>Selecione um tipo de usuário</option>
-                        <option value="normal">Normal</option>
-                        <option value="adm">Administrador</option>
+                        <option value="normal">Ativista</option>
+                        <option value="adm">Onganizações sem fins lucrativos</option>
                     </select>
                 </div>
 
