--- a/src/app/minhas-postagens/minhas-postagens.component.css
+++ b/src/app/minhas-postagens/minhas-postagens.component.css
@@ -1,9 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
 
-* {
+html{
     box-sizing: border-box;
-    font-family: 'Rubik', sans-serif;  
-    
+    font-family: 'Rubik', sans-serif;    
+}
+
+.wavetop{
+    background: #FFEEAD;
+    margin-top: -100px;
+
+}
+
+.corfundo{
+    background: #FFEEAD;
 }
 
 .pontos {
