--- a/src/app/postar/postar.component.html
+++ b/src/app/postar/postar.component.html
@@ -1,4 +1,5 @@
-<div id="main-banner" style='background-image:url({{postagem.fotoPostagem}})'>
+<div id="main-banner" style='background-image:url({{postagem.fotoPostagem}})' 
+height="90vh" width= "210vh">
 
     
     <div id="main-banner-content">
@@ -9,82 +10,45 @@
 </div>
 
 
-<div class="container-fluid row d-flex fundo p-0 m-0">
+<div class="container-fluid row d-flex fundo p-0 m-0 pb-5 pt-4">
+
     <div class="col-sm-7 ">
-      <div class="card ml-5 mr-3">
+      <div class="card ml-5 mr-3 corfundo">
         <div class="card-body">
           <h1 class="card-title">{{postagem.titulo}}</h1>
           <p class="card-text">{{postagem.texto}}</p>
         </div>
       </div>
     </div>
+
     <div class="col-sm-5">
-      <div class="card  mr-5">
-        <div class="card-body">
-            <div class="container-fluid row d-flex fundo p-0 m-0">
-          <h5 class="card-title">{{postagem.usuario.nome}}</h5>
-            <li>
-            <img src="{{postagem.usuario.foto}}" alt="imagem do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
-        </li>
+      <div class="card corfundo">
+        <div class="card-body corfundo">
+            <div class="container-fluid row d-flex p-0 m-0">
+            <li class="nome">
+                <img src="{{postagem.usuario.foto}}" alt="imagem do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
+            </li>
+            <h5 class="card-title pl-3">Postado por {{postagem.usuario.nome}}</h5>
     </div>
-        <p class="card-text">{{postagem.dataEvento | date: 'dd/MM/yyyy'}}</p>
-          <a href="#" class="btn btn-primary mr-4">EU VOU!</a>
-          <a href="#" class="btn btn-primary">Curtir</a>
-        </div>
+        <p class="card-text">Data do evento {{postagem.dataEvento | date: 'dd/MM/yyyy'}}</p>
+          <!-- <a href="#" class="btn corbotao mr-4">EU VOU!</a>
+          <a href="#" class="btn corbotao">Curtir</a> -->
+        </div>        
       </div>
+
+     <div class="mt-3">
+      <button class="btn mr-3"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+<!-- Curtidas: {{postagem.curtir}} -->
+
+<button class="btn mr-3"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+<!-- Descurtidas: {{postagem.descurtir}} -->
+
+<button class="btn"><i class="fa fa-users" aria-hidden="true"></i></button>
+<!-- Participantes: -->
+</div>
+
     </div>
   </div>
-
-  <div class="fundo">
-    <div class="container p-5" id="fantasma">
-      <h1 class="mt-5 m-5 text-center">Tipos de eventos</h1>
-      <div class="card list">
-        <div class="row m-4">
-          <div class="col-md-2">
-            <img src="https://cdn-icons-png.flaticon.com/512/3077/3077443.png" class="img-fluid rounded-start" width="200" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body ">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    
-      <div class="card list">
-        <div class="row m-4">
-          <div class="col-md-2">
-            <img src="https://cdn-icons-png.flaticon.com/512/3077/3077435.png" class="img-fluid rounded-start" width="200" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    
-      <div class="card list">
-        <div class="row m-4">
-          <div class="col-md-2">
-            <img src="https://cdn-icons-png.flaticon.com/512/3077/3077441.png" class="img-fluid rounded-start" width="200" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
 
 
 
