--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -47,7 +47,7 @@
                     <select class="form-control" name="tipo" id="tipo" (change)='tipoUsuario($event)'>
                         <option>Selecione um tipo de usuário</option>
                         <option value="normal">Ativista</option>
-                        <option value="adm">Onganizações sem fins lucrativos</option>
+                        <option value="adm">Onganizações não governamentais</option>
                     </select>
                 </div>
 
