--- a/src/app/delete/postagem-delete/postagem-delete.component.html
+++ b/src/app/delete/postagem-delete/postagem-delete.component.html
@@ -1,4 +1,9 @@
-<div class="container mb-5 mt-5">
+<div class="wavetop corfundo">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#C4C4C4" fill-opacity="1" d="M0,288L48,277.3C96,267,192,245,288,234.7C384,224,480,224,576,234.7C672,245,768,267,864,245.3C960,224,1056,160,1152,149.3C1248,139,1344,181,1392,202.7L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+</div>
+
+<div>
+<div class="container-fluid pb-5 pt-5 corfundo">
 
     <div class="row">
         <div class="col-md-12">
@@ -30,7 +35,7 @@
     
     <div class="row mt-5">
         <div class="col-md-12 d-flex justify-content-center">
-            <button class="btn btn-danger mr-4" routerLink='/inicio'>Não</button>
+            <button class="btn btn-danger mr-4" routerLink='/minhas-postagens'>Não</button>
             <button class="btn btn-success" (click)='apagar()'>Sim</button>
         </div>
     </div>
@@ -38,4 +43,5 @@
 
 
 
+</div>
 </div>
