--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -6,21 +6,21 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://i.imgur.com/wzLaNQF.png" class="d-block w-100 imgcarrossel" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h3>Seja Bem-vindo!</h3>
-        <p>A sua rede social sobre vida marinha.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="https://i.imgur.com/u1Oj44f.png" class="d-block w-100 imgcarrossel" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h3>Seja Bem-vindo!</h3>
-        <p>A sua rede social sobre vida marinha.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
       <img src="https://i.imgur.com/ptVBGmi.png" class="d-block w-100 imgcarrossel" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Seja Bem-vindo!</h3>
+        <p>A sua rede social sobre vida marinha.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://i.imgur.com/InAsP5c.jpg" class="d-block w-100 imgcarrossel" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Seja Bem-vindo!</h3>
+        <p>A sua rede social sobre vida marinha.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://i.imgur.com/EgRFqa3.jpg" class="d-block w-100 imgcarrossel" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h3>Seja Bem-vindo!</h3>
         <p>A sua rede social sobre vida marinha.</p>
@@ -187,8 +187,11 @@
         </div>
       </div>
     </div>
-  
+  </div>
+  <app-rodape *ngIf='!logado()'></app-rodape>
+  </div>
 
+  
 
     
   
