--- a/src/app/edit/postagem-edit/postagem-edit.component.html
+++ b/src/app/edit/postagem-edit/postagem-edit.component.html
@@ -1,37 +1,57 @@
-<div class="container mt-5 mb-5">
-
-    <div class="row">
-        <h1 class="text-center text-secondary">Atualizar postagem</h1>
-    </div>
-
-
-<div class="row d-flex justify-content-center">
-<div class="col-md-6">
-
-    <div class="form-group">
-        <label for="titulo">Título</label>
-        <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo" placeholder="Digite o Título">
-      </div>
-      
-      <div class="form-group">
-        <label for="texto">Texto</label>
-        <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto" rows="3"></textarea>
-      </div>
-
-      <div class="form-group">
-        <label for="tema">Escolha um Tema ou <a data-dismiss="modal" routerLink='/tema'>cadastre um novo</a>: </label>
-        <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)='findByIdTema()'>
-            <option *ngFor='let tema of listaTemas' value="{{tema.id}}">
-              {{tema.descricao}}
-            </option>
-        </select>
-      </div>
-
-      <div class="d-flex justify-content-center">
-        <button class="btn btn-danger mr-4" routerLink='/inicio' >Cancelar</button>
-        <button class="btn btn-success" (click)= 'atualizar()'>Atualizar</button>
-      </div>
-
+<div class="wavetop">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#C4C4C4" fill-opacity="1" d="M0,288L48,277.3C96,267,192,245,288,234.7C384,224,480,224,576,234.7C672,245,768,267,864,245.3C960,224,1056,160,1152,149.3C1248,139,1344,181,1392,202.7L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
 </div>
+
+
+<div class="corfundo pt-3 pb-5">
+<div class="container-fluid corfundo">
+
+  <div class="row">
+      <div class="col-md-12">
+          <h1 class="text-center text-secondary ">Atualizar postagem</h1>
+      </div>
+  </div>
+
+  <div class="row d-flex justify-content-center">
+      <div class="col-md-6">
+
+          <div class="form-group">
+              <label for="titulo">Título</label>
+              <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo" placeholder="Digite o Título">
+            </div>
+  
+            <div class="form-group">
+              <label for="texto">Texto</label>
+              <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto" rows="3"></textarea>
+            </div>
+            
+            <div class="form-group">
+              <label for="dataEvento">Data do Evento</label>
+              <input [(ngModel)]='postagem.dataEvento' type="date" class="form-control" name="dataEvento" id="dataEvento" rows="3">
+            </div>
+
+            <div class="form-group">
+              <label for="fotoPostagem">Link da Foto</label>
+              <input [(ngModel)]='postagem.fotoPostagem' type="text" class="form-control" id="fotoPostagem" placeholder="Digite o Link da Postagem">
+            </div>
+  
+            <div class="form-group">
+              <label for="tema">Escolha um Tema ou <a data-dismiss="modal" routerLink='/tema'>cadastre um novo</a>: </label>
+              <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)='findByIdTema()'>
+                  <option *ngFor='let tema of listaTemas' value="{{tema.id}}">
+                    {{tema.descricao}}
+                  </option>
+              </select>
+            </div>
+
+            <div class="d-flex justify-content-center">
+                <button class="btn btn-danger mr-4" routerLink='/minhas-postagens'>Cancelar</button>
+                <button class="btn btn-success" (click)='atualizar()'>Atualizar</button>
+
+            </div>
+
+      </div>
+  </div>
+
 </div>
 </div>
