--- a/src/app/minhas-postagens/minhas-postagens.component.html
+++ b/src/app/minhas-postagens/minhas-postagens.component.html
@@ -1,14 +1,22 @@
 <div class="wavetop">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#C4C4C4" fill-opacity="1" d="M0,288L48,277.3C96,267,192,245,288,234.7C384,224,480,224,576,234.7C672,245,768,267,864,245.3C960,224,1056,160,1152,149.3C1248,139,1344,181,1392,202.7L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#C4C4C4" fill-opacity="1" d="M0,288L48,277.3C96,267,192,245,288,234.7C384,224,480,224,576,234.7C672,245,768,267,864,245.3C960,224,1056,160,1152,149.3C1248,139,1344,181,1392,202.7L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
 </div>
 
-<div class="container-fluid corfundo">
-<div class="carousel-item active col-md-12">
+<div class="corfundo pt-3 pb-5">
+
+  <div class="row p-0 m-0">
+    <div class="col-md-12">
+        <h1 class="text-center text-secondary pb-5">Suas Postagens</h1>
+    </div>
+  </div>
+
+<div class="container-fluid d-flex corfundo">
 
 
+  <div class="carousel-item active col-md-12 ">
     <div class="col-md-3 mb-5" style="float:left" *ngFor='let postagem of usuario.postagem'>
-      <div class="card mb-2" style="height: 450px;">
-        <img class="card-img-top" src="{{postagem.fotoPostagem}}" width="250px" height="250px" alt="Card image cap">
+      <div class="card mb-2 list" style="height: 440px;">
+        <img class="card-img-top list" src="{{postagem.fotoPostagem}}" width="250px" height="250px" alt="Card image cap">
         <div class="card-body d-flex flex-column justify-content-between">
           <h4 class="card-title pontos">{{postagem.titulo}}</h4>
           
@@ -23,5 +31,6 @@
       </div>
     </div>
   </div>
+</div>
 
 </div>
