--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -44,7 +44,18 @@
                               </div>
                               <div class="text-container">
                                   <h6>Victor Valencio</h6>
-                                  <p>Engenharia da Computação 4° Sem. Desenvolvedor Java Full Stack pela Generation Brasil.</p>
+                                  <p>Engenharia da Computação 4° Sem. Desenvolvedor Java Full Stack pela Generation.</p>
+                                  <div class="mt-2">
+                                  <ul class="social-network">
+                                    <li>
+                                        <a href="https://github.com/11Victor" target="_blank" class="icogithub"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+                                    </li>
+                
+                                    <li>
+                                        <a href="https://www.linkedin.com/in/victorvalencio/" target="_blank" class="icolinkedin"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                                    </li>
+                                </ul>
+                               </div>
                               </div>
                           </div>
                       </div>
@@ -60,7 +71,18 @@
                               <div class="text-container">                                    
                                   <h6>Vitória de Lara</h6>
                                   <p>Técnica em Informática. Desenvolvedora Java Full Stack pela Generation Brasil.</p>
-                              </div>
+                                  <div class="mt-2">
+                                    <ul class="social-network">
+                                      <li>
+                                          <a href="https://github.com/vitoria2002campos" target="_blank" class="icogithub"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+                                      </li>
+                  
+                                      <li>
+                                          <a href="https://www.linkedin.com/in/vit%C3%B3ria-de-lara/" target="_blank" class="icolinkedin"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                                      </li>
+                                  </ul>
+                                 </div>
+                                </div>
                           </div>
                       </div>
                   </a>
@@ -77,6 +99,17 @@
                                   <h6>Raquel Silva</h6>
                                   <p>Formada em Direito. Desenvolvedora Java Full Stack pela Generation Brasil.
                                 </p>
+                                <div class="mt-2">
+                                    <ul class="social-network">
+                                      <li>
+                                          <a href="https://github.com/raqueldcsilva" target="_blank" class="icogithub"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+                                      </li>
+                  
+                                      <li>
+                                          <a href="https://www.linkedin.com/in/raquel-da-conceição-silva-ab0285189/" target="_blank" class="icolinkedin"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                                      </li>
+                                  </ul>
+                                 </div>
                               </div>
                           </div>
                       </div>
@@ -107,6 +140,17 @@
                                 <h6>Bruno Rodrigues</h6>
                                 <p>Formado em Educação Física. Desenvolvedor Java Full Stack pela Generation Brasil.
                                 </p>
+                                <div class="mt-2">
+                                    <ul class="social-network">
+                                      <li>
+                                          <a href="https://github.com/obrunorm" target="_blank" class="icogithub"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+                                      </li>
+                  
+                                      <li>
+                                          <a href="https://www.linkedin.com/in/bruno-martins-8667b0180/" target="_blank" class="icolinkedin"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                                      </li>
+                                  </ul>
+                                 </div>
                             </div>
                         </div>
                     </div>
@@ -122,6 +166,17 @@
                           <div class="text-container">
                               <h6>Jessica Miyuki</h6>
                               <p>Formada em Design Gráfico. Desenvolvedora Java Full Stack pela Generation Brasil.</p>
+                              <div class="mt-2">
+                                <ul class="social-network">
+                                  <li>
+                                      <a href="https://github.com/miyukiiy" target="_blank" class="icogithub"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+                                  </li>
+              
+                                  <li>
+                                      <a href="https://www.linkedin.com/in/jessicamiwasaki/" target="_blank" class="icolinkedin"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                                  </li>
+                              </ul>
+                             </div>
                           </div>
                       </div>
                   </div>
@@ -132,3 +187,5 @@
         </div>
         </div>
 </div>
+
+
