--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -58,7 +58,7 @@
 </nav>
 
 <!-- Modal -->
-<div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<!-- <div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -110,7 +110,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
   
 
 
