--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -11,7 +11,7 @@
                 <!--Nome-->
                 <div class="form-group col-md-8">
                     <label for="nome">Nome</label>
-                    <input [(ngModel)]='usuario.nome' class="form-control" type="text" name="nome" id="nome" placeholder="Escreva seu nome">
+                    <input [(ngModel)]='usuario.nome' class="form-control" type="text" name="nome" id="nome" placeholder="Escreva somente seu primeiro nome">
                 </div>
 
                 
