--- a/src/app/pesquisar/pesquisar.component.html
+++ b/src/app/pesquisar/pesquisar.component.html
@@ -17,7 +17,7 @@
       <div class="col-md-6 mr-0 ">
         <form class="mt-2 mb-4 d-flex justify-content-center align-items-center">
           <input name="nomeUser" [(ngModel)]='titulo' (keyup)='getPostagensByTitulo()'
-            class="form-control barra-pesquisa" type="search" placeholder="Pesquise por nome de usuário" aria-label="Search">
+            class="form-control barra-pesquisa" type="search" placeholder="Pesquise o Título da postagem" aria-label="Search">
         </form>
       </div>
     </div>
